:bug: fix bug resourceCellContent of undefined, optimize scrollbar for resourceview

--- a/src/ResourceView/styles.module.css
+++ b/src/ResourceView/styles.module.css
@@ -20,8 +20,9 @@
 /* ResourceViewBody */
 .ResourceViewBody {
   margin: 0;
-  overflow: auto;
+  overflow: scroll hidden;
 }
+
 .ResourceViewBodyTableContainer {
   padding: 0;
 }
